--- a/index.html
+++ b/index.html
@@ -8,24 +8,44 @@
 			href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<title>Valentin | Site CV</title>
 	</head>
 	<body>
-		<!-- TODO: Improve hover-effects -->
-		<!-- TODO: Add animations -->
-		<!-- TODO: Add form to contact -->
 		<header>
-			<img src="./assets/Val.webp" alt="Photo de face de Valentin" />
-			<div class="header-text">
+			<img
+				class="animate__animated animate__fadeInLeft"
+				src="./assets/Val.webp"
+				alt="Photo de face de Valentin"
+			/>
+			<div class="header-text animate__animated animate__fadeInRight">
 				<h1>Valentin, 22 ans</h1>
 				<h2>Développeur Web</h2>
 				<a class="btn-primary" href="./assets/ValentinCV.pdf" target="_blank"
+					><svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="24"
+						height="24"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="3"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="lucide lucide-download"
+					>
+						<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+						<polyline points="7 10 12 15 17 10" />
+						<line x1="12" x2="12" y1="15" y2="3" /></svg
 					>Télécharger mon CV</a
 				>
 			</div>
 		</header>
 		<main>
-			<section class="section">
+			<section class="section animate__animated animate__fadeInUp">
 				<h2>Description:</h2>
 				<div class="section-content">
 					<p>
@@ -210,9 +230,29 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.
 							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
 						</p>
-						<p class="project-link">
-							Link:
-							<a href="https://pokemouille.vercel.app/" target="_blank"
+						<p>
+							<a
+								class="project-link"
+								href="https://pokemouille.vercel.app/"
+								target="_blank"
+								><svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									class="lucide lucide-link"
+								>
+									<path
+										d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
+									/>
+									<path
+										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
+									/></svg
 								>https://pokemouille.vercel.app/</a
 							>
 						</p>
@@ -224,9 +264,29 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.
 							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
 						</p>
-						<p class="project-link">
-							Link:
-							<a href="https://pokemouille.vercel.app/" target="_blank"
+						<p>
+							<a
+								class="project-link"
+								href="https://pokemouille.vercel.app/"
+								target="_blank"
+								><svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									class="lucide lucide-link"
+								>
+									<path
+										d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
+									/>
+									<path
+										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
+									/></svg
 								>https://pokemouille.vercel.app/</a
 							>
 						</p>
@@ -238,9 +298,29 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.
 							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
 						</p>
-						<p class="project-link">
-							Link:
-							<a href="https://pokemouille.vercel.app/" target="_blank"
+						<p>
+							<a
+								class="project-link"
+								href="https://pokemouille.vercel.app/"
+								target="_blank"
+								><svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									class="lucide lucide-link"
+								>
+									<path
+										d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
+									/>
+									<path
+										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
+									/></svg
 								>https://pokemouille.vercel.app/</a
 							>
 						</p>
@@ -252,20 +332,60 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.
 							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
 						</p>
-						<p class="project-link">
-							Link:
-							<a href="https://pokemouille.vercel.app/" target="_blank"
-								>https://pokemouille.vercel.app/</a
+						<a
+							class="project-link"
+							href="https://pokemouille.vercel.app/"
+							target="_blank"
+							><svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="24"
+								height="24"
+								viewBox="0 0 24 24"
+								fill="none"
+								stroke="currentColor"
+								stroke-width="2"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								class="lucide lucide-link"
 							>
-						</p>
+								<path
+									d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
+								/>
+								<path
+									d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
+								/></svg
+							>https://pokemouille.vercel.app/</a
+						>
 						<img src="./assets/project.webp" alt="" />
 					</article>
 				</div>
 			</section>
 			<section class="section">
 				<h2 class="contact-title">Contact:</h2>
+				<form class="contact-form" action="traitement.php" method="post">
+					<input
+						class="input"
+						type="text"
+						name="subject"
+						placeholder="Votre Nom"
+					/>
+					<input
+						class="input"
+						type="email"
+						name="email"
+						placeholder="Votre Email"
+					/>
+					<textarea
+						class="input"
+						name="body"
+						rows="5"
+						cols="30"
+						placeholder="Votre Message"
+					></textarea>
+					<input class="btn-primary" type="submit" value="Envoyer" />
+				</form>
 				<div class="section-content contact-links">
-					<article class="contact-link">
+					<div class="contact-link">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="24"
@@ -284,8 +404,8 @@
 						<a href="mailto:valentin.musset.dev@gmail.com" target="_blank"
 							>valentin.musset.dev@gmail.com</a
 						>
-					</article>
-					<article class="contact-link">
+					</div>
+					<div class="contact-link">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="24"
@@ -307,8 +427,8 @@
 							target="_blank"
 							>Legé 44650, France</a
 						>
-					</article>
-					<article class="contact-link">
+					</div>
+					<div class="contact-link">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="24"
@@ -327,8 +447,8 @@
 							<path d="M9 18c-4.51 2-5-2-7-2" />
 						</svg>
 						<a href="https://github.com/Vaalley/" target="_blank">Mon GitHub</a>
-					</article>
-					<article class="contact-link">
+					</div>
+					<div class="contact-link">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="24"
@@ -346,8 +466,8 @@
 							/>
 						</svg>
 						<a href="tel:+336374317979" target="_blank">06 37 43 91 79</a>
-					</article>
-					<article class="contact-link">
+					</div>
+					<div class="contact-link">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							width="24"
@@ -371,7 +491,7 @@
 							target="_blank"
 							>Mon LinkedIn</a
 						>
-					</article>
+					</div>
 				</div>
 			</section>
 		</main>
