--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<body>
 		<header>
 			<img
-				class="animate__animated animate__fadeInLeft"
+				class="animate__animated animate__fadeIn"
 				src="./assets/Val.webp"
 				alt="Photo de face de Valentin"
 			/>
-			<div class="header-text animate__animated animate__fadeInRight">
+			<div class="header-text animate__animated animate__fadeIn">
 				<h1>Valentin, 22 ans</h1>
 				<h2>Développeur Web</h2>
 				<a class="btn-primary" href="./assets/ValentinCV.pdf" target="_blank"
