add projects | remove contact form | update CV

--- a/index.html
+++ b/index.html
@@ -225,10 +225,49 @@
 				<h2>Projets:</h2>
 				<div class="section-content cards">
 					<article class="card">
-						<h3>Projet 1</h3>
+						<h3>Val's Toolbox</h3>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.
-							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
+							A cool little project I did to put all my tiny projects in like a
+							weather app, BMI calculator etc... (Only responsive on desktop)
+						</p>
+						<p>
+							<a
+								class="project-link"
+								href="https://val-toolbox.vercel.app/"
+								target="_blank"
+								><svg
+									xmlns="http://www.w3.org/2000/svg"
+									width="24"
+									height="24"
+									viewBox="0 0 24 24"
+									fill="none"
+									stroke="currentColor"
+									stroke-width="2"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									class="lucide lucide-link"
+								>
+									<path
+										d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
+									/>
+									<path
+										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
+									/></svg
+								>https://val-toolbox.vercel.app/</a
+							>
+						</p>
+						<img
+							src="https://cdn.sanity.io/images/w4flv24l/production/750661df462ffff57c6e91bcb261f0dc89b83788-1919x1079.png?h=300"
+							alt=""
+						/>
+					</article>
+					<article class="card">
+						<h3>Pokémouille</h3>
+						<p>
+							Pokémouille was at the time my biggest project yet, it started as
+							a need for a better and faster Pokedex website as alternatives
+							weren't very convenient for my use. I learned a lot making this
+							one, and a lot of hours were poured into it!
 						</p>
 						<p>
 							<a
@@ -256,18 +295,22 @@
 								>https://pokemouille.vercel.app/</a
 							>
 						</p>
-						<img src="./assets/project.webp" alt="" />
+						<img
+							src="https://cdn.sanity.io/images/w4flv24l/production/79778f389517db2a766ad893276f83e1dc06d65e-1919x1079.png?h=300"
+							alt=""
+						/>
 					</article>
 					<article class="card">
-						<h3>Projet 1</h3>
+						<h3>Recreating Instrument</h3>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.
-							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
+							This one was really fun to make because it was quite short and I
+							tried a few effects for the first time, most notably the on scroll
+							reveal effect. (Only responsive on desktop)
 						</p>
 						<p>
 							<a
 								class="project-link"
-								href="https://pokemouille.vercel.app/"
+								href="https://recreating-instrument.vercel.app/"
 								target="_blank"
 								><svg
 									xmlns="http://www.w3.org/2000/svg"
@@ -287,54 +330,25 @@
 									<path
 										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
 									/></svg
-								>https://pokemouille.vercel.app/</a
+								>https://recreating-instrument.vercel.app/</a
 							>
 						</p>
-						<img src="./assets/project.webp" alt="" />
+						<img
+							src="https://cdn.sanity.io/images/w4flv24l/production/6deb8032dc1cad377b3118340a57c6037962e3d6-1920x1080.png?h=300"
+							alt=""
+						/>
 					</article>
 					<article class="card">
-						<h3>Projet 1</h3>
+						<h3>Recreating Ableton</h3>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.
-							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
-						</p>
-						<p>
-							<a
-								class="project-link"
-								href="https://pokemouille.vercel.app/"
-								target="_blank"
-								><svg
-									xmlns="http://www.w3.org/2000/svg"
-									width="24"
-									height="24"
-									viewBox="0 0 24 24"
-									fill="none"
-									stroke="currentColor"
-									stroke-width="2"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									class="lucide lucide-link"
-								>
-									<path
-										d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
-									/>
-									<path
-										d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
-									/></svg
-								>https://pokemouille.vercel.app/</a
-							>
-						</p>
-						<img src="./assets/project.webp" alt="" />
-					</article>
-					<article class="card">
-						<h3>Projet 1</h3>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.
-							Voluptatum hic eos excepturi? Sed praesentium eos rerum officiis.
+							Ableton's learn more page was interesting as it was one of the
+							longest page I did at the time and took me quite a while to get
+							things mostly right, it's not perfect. (Only responsive on
+							desktop)
 						</p>
 						<a
 							class="project-link"
-							href="https://pokemouille.vercel.app/"
+							href="https://recreating-ableton.vercel.app/"
 							target="_blank"
 							><svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -354,15 +368,18 @@
 								<path
 									d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
 								/></svg
-							>https://pokemouille.vercel.app/</a
+							>https://recreating-ableton.vercel.app/</a
 						>
-						<img src="./assets/project.webp" alt="" />
+						<img
+							src="https://cdn.sanity.io/images/w4flv24l/production/0c16f72013d1e1d06143330c865867a96e643839-1920x1080.png?h=300"
+							alt=""
+						/>
 					</article>
 				</div>
 			</section>
 			<section class="section">
 				<h2 class="contact-title">Contact:</h2>
-				<form class="contact-form" action="traitement.php" method="post">
+				<!-- <form class="contact-form" action="traitement.php" method="post">
 					<input
 						class="input"
 						type="text"
@@ -383,7 +400,7 @@
 						placeholder="Votre Message"
 					></textarea>
 					<input class="btn-primary" type="submit" value="Envoyer" />
-				</form>
+				</form> -->
 				<div class="section-content contact-links">
 					<div class="contact-link">
 						<svg
